Main changes: update constants, add repo for category and equipemnt, add SuperService, add few html

--- a/src/main/resources/templates/homepage/header.html
+++ b/src/main/resources/templates/homepage/header.html
@@ -65,74 +65,83 @@
                                 DESKI
                             </button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skis&sex=woman}">DESKI SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skis&sex=man}">DESKI SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skis&sex=child}">DESKI SNOWBOARDOWE JUNIORSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboards',sex='woman')}">DESKI SNOWBOARDOWE
+                                    DAMSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboards',sex='man')}">DESKI SNOWBOARDOWE
+                                    MĘSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboards',sex='child')}">DESKI SNOWBOARDOWE
+                                    JUNIORSKIE</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">BUTY</button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skiShoes&sex=woman}">BUTY SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skiShoes&sex=man}">BUTY SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skiShoes&sex=child}">BUTY SNOWBOARDOWE JUNIORSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardShoes',sex='woman')}">BUTY SNOWBOARDOWE
+                                    DAMSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardShoes',sex='man')}">BUTY SNOWBOARDOWE
+                                    MĘSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardShoes',sex='child')}">BUTY SNOWBOARDOWE
+                                    JUNIORSKIE</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">WIĄZANIA</button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skiPoles&sex=woman}">WIĄZANIA SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skiPoles&sex=man}">WIĄZANIA SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skiPoles&sex=child}">WIĄZANIA SNOWBOARDOWE UNIORSKIE</a>
-                            </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">ZESTAWY</button>
-                            <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skiHelmets&sex=woman}">ZESTAWY SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skiHelmets&sex=man}">ZESTAWY SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skiHelmets&sex=child}">ZESTAWY SNOWBOARDOWE JUNIORSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardBindings',sex='woman')}">WIĄZANIA
+                                    SNOWBOARDOWE DAMSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardBindings',sex='man')}">WIĄZANIA
+                                    SNOWBOARDOWE MĘSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardBindings',sex='child')}">WIĄZANIA
+                                    SNOWBOARDOWE UNIORSKIE</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">RĘKAWICE</button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skiGloves&sex=woman}">RĘKAWICE SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skiGloves&sex=man}">RĘKAWICE SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skiGloves&sex=child}">RĘKAWICE SNOWBOARDOWE JUNIORSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGloves',sex='woman')}">RĘKAWICE
+                                    SNOWBOARDOWE DAMSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGloves',sex='man')}">RĘKAWICE
+                                    SNOWBOARDOWE MĘSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGloves',sex='child')}">RĘKAWICE
+                                    SNOWBOARDOWE JUNIORSKIE</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">GOGLE</button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=skiGoggles&sex=woman}">GOGLE SNOWBOARDOWE DAMSKIE</a>
-                                <a th:href="@{/equipment?eq=skiGoggles&sex=man}">GOGLE SNOWBOARDOWE MĘSKIE</a>
-                                <a th:href="@{/equipment?eq=skiGoggles&sex=child}">GOGLE SNOWBOARDOWE JUNIORSKIE</a>
-                            </div>
-                        </div>
-                        <div class="dropdown">
-                            <button class="dropbtn">ODZIEŻ TERMOAKTYWNA</button>
-                            <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=woman}">ODZIEŻ SNOWBOARDOWA
-                                    DAMSKA</a>
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=man}">ODZIEŻ SNOWBOARDOWA MĘSKA</a>
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=child}">ODZIEŻ SNOWBOARDOWA
-                                    JUNIORSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGoggles',sex='woman')}">GOGLE
+                                    SNOWBOARDOWE DAMSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGoggles',sex='man')}">GOGLE SNOWBOARDOWE
+                                    MĘSKIE</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardGoggles',sex='child')}">GOGLE
+                                    SNOWBOARDOWE JUNIORSKIE</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn">KASKI</button>
                             <div class="dropdown-content">
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=woman}">KASKI SNOWBOARDOWE
-                                    DAMSKA</a>
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=man}">KASKI SNOWBOARDOWE MĘSKA</a>
-                                <a th:href="@{/equipment?eq=thermoactiveClothing&sex=child}">KASKI SNOWBOARDOWE
-                                    JUNIORSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardHelmets',sex='woman')}">KASKI
+                                    SNOWBOARDOWE DAMSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardHelmets',sex='man')}">KASKI SNOWBOARDOWE
+                                    MĘSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='snowboardHelmets',sex='child')}">KASKI
+                                    SNOWBOARDOWE JUNIORSKA</a>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <button class="dropbtn">ODZIEŻ TERMOAKTYWNA</button>
+                            <div class="dropdown-content">
+                                <a th:href="@{/homepage/equipment(eqm='thermoactiveClothing',sex='woman')}">ODZIEŻ
+                                    SNOWBOARDOWA DAMSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='thermoactiveClothing',sex='man')}">ODZIEŻ
+                                    SNOWBOARDOWA MĘSKA</a>
+                                <a th:href="@{/homepage/equipment(eqm='thermoactiveClothing',sex='child')}">ODZIEŻ
+                                    SNOWBOARDOWA JUNIORSKA</a>
                             </div>
                         </div>
                         <div class="dropdown">
                             <button class="dropbtn borderTopRightRadius5BorderBottomRightRadius5">
-                                <a th:href="@{/manufacturer}">PRODUCENCI</a>
+                                <a th:href="@{/homepage/manufacturer}">PRODUCENCI</a>
                             </button>
                         </div>
                     </div>
