--- a/src/main/resources/templates/onas/o-firmie.html
+++ b/src/main/resources/templates/onas/o-firmie.html
@@ -38,7 +38,7 @@
             <p class="fontSize14">
                 Nie jest to strona firmy.<br>
                 Strona wykonana w celach treningowych. Większość tekstu (front) przekopiowana ze strony:<br>
-                <a href="https://ski24.pl">https://ski24.pl</a></p>
+                <a href="https://snowboardowy.pl/">https://snowboardowy.pl/</a></p>
         </div>
     </div>
 
