--- a/src/main/resources/templates/homepage/footer.html
+++ b/src/main/resources/templates/homepage/footer.html
@@ -7,7 +7,7 @@
             <div class="col-3">
                 <h7>ZAPISZ SIĘ DO NEWSLETTERA</h7>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">
+                    <li><a class="text-muted" th:href="@{/}">
                         <form action="index.html">
                             <input type="text" name="nazwa" placeholder="Twój adres email*" size="30"
                                    class="borderRadius5MinHeight30MaxHeight35BorderColor109163207099">
