Main changes: update constants, updare/add services, controller and html for users Admin: - update UserAdminController - update Equipment - add UserAdminServices - update constants admin/ fronted/ general html: - add equipment_list - add user_list - add user_create - add 405 - update header - update manufacturerCreateOrUpdate - update footer

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -88,11 +88,11 @@
                                 INNE INFORMACJE
                             </button>
                             <div class="dropdown-content">
-                                <a th:href="@{users}">UŻYTKOWNICY</a>
-                                <a th:href="@{categories}">KATEGORIE</a>
-                                <a th:href="@{customers}">KLIENCI</a>
-                                <a th:href="@{reviews}">RECENZJE</a>
-                                <a th:href="@{orders}">ZAMÓWIENIA</a>
+                                <a th:href="@{/admin/user}">UŻYTKOWNICY</a>
+                                <a th:href="@{/admin/category}">KATEGORIE</a>
+                                <a th:href="@{/admin/customer}">KLIENCI</a>
+                                <a th:href="@{/admin/review}">RECENZJE</a>
+                                <a th:href="@{/admin/order}">ZAMÓWIENIA</a>
                             </div>
                         </div>
                     </div>
