--- a/src/main/resources/templates/admin/manufacturerCreateOrUpdate.html
+++ b/src/main/resources/templates/admin/manufacturerCreateOrUpdate.html
@@ -18,7 +18,6 @@
         </div>
 
         <div>
-            <!--<th:block th:if="${manufacturer != null}">-->
             <form th:action="@{/admin/manufacturer}"
                   th:object="${manufacturer}"
                   th:method="post"
@@ -30,33 +29,30 @@
                        th:field="*{id}">
 
                 <div class="form-group">
-                    <label for="manufacturerName">Nazwa producenta</label>
-                    <input type="text" class="form-control" id="manufacturerName"
-                           name="manufacturerName" placeholder="Wpisz nazwę producenta"
+                    <label>Nazwa producenta</label>
+                    <input type="text" class="form-control" placeholder="Wpisz nazwę producenta"
                            th:field="*{manufacturerName}">
                 </div>
+
                 <div class="form-group">
-                    <label for="description">Opis</label>
-                    <textarea rows="5" cols="68" id="description"
-                              name="description"
-                              th:field="*{description}">
-                        </textarea>
+                    <label>Opis</label>
+                    <textarea rows="5" cols="68" th:field="*{description}"></textarea>
                 </div>
+
                 <div class="form-group">
-                    <label for="manufacturerImage">Zdjęcie</label>
-                    <input type="file" class="form-control" id="manufacturerImage" name="manufacturerImage"
-                           th:field="*{multipartFile}" multiple="multiple">
+                    <label>Zdjęcie</label>
+                    <input type="file" class="form-control" th:field="*{multipartFile}" multiple="multiple">
                     <img id="smallPic" class="width300 marginTop5" alt="Podgląd zdjęcia" src="#"
                          th:src="@{'data:image/jpg;base64,'+*{base64Image}}"/>
 
-                    <input type="hidden" id="base64Image" name="base64Image" th:field="*{base64Image}">
+                    <input type="hidden" th:field="*{base64Image}">
                 </div>
+
                 <button type="submit" class="btn btn-primary">Zatwierdź</button>
                 <button type="button" class="btn btn-primary" id="cancel" onclick="javascript:history.go(-1);">
                     Anuluj
                 </button>
             </form>
-            <!--</th:block>-->
         </div>
     </div>
 
