Main changes: add/ update controller/ services and html for category

--- a/src/main/resources/templates/admin/manufacturerCreateOrUpdate.html
+++ b/src/main/resources/templates/admin/manufacturerCreateOrUpdate.html
@@ -25,8 +25,7 @@
                 <!--TODO add fields validation-->
                 <!--onsubmit="return validateCreateManufacturerForm()">-->
 
-                <input type="hidden" id="manufacturerId" name="manufacturerId"
-                       th:field="*{id}">
+                <input type="hidden" id="manufacturerId" name="manufacturerId" th:field="*{id}">
 
                 <div class="form-group">
                     <label>Nazwa producenta</label>
