--- a/src/main/resources/templates/homepage/equipment_list.html
+++ b/src/main/resources/templates/homepage/equipment_list.html
@@ -24,7 +24,7 @@
             <div th:each="equipment: ${equipmentList}">
                 <div class="width250border07255006displayInlineBlockMargin14">
                     <div class="width245">
-                        <a th:href="@{viewEquipment(id=${equipment.equipmentId})}">
+                        <a th:href="@{/homepage/equipment/viewEquipment(id=${equipment.id})}">
                             <img class="book-small"
                                  th:src="@{'data:image/jpg;base64,'+${equipment.base64Image}}"
                                  th:width="245px"
@@ -33,7 +33,7 @@
                     </div>
                     <div class="textAlignCenterVerticalAlignCenterMarginTop5">
                         <div class="height90">
-                            <a th:href="@{viewEquipment(id=${equipment.equipmentId})}">
+                            <a th:href="@{viewEquipment(id=${equipment.id})}">
                                 <b th:text="${equipment.name}"></b>
                             </a>
                         </div>
