--- a/src/main/resources/templates/homepage/equipment_list.html
+++ b/src/main/resources/templates/homepage/equipment_list.html
@@ -21,31 +21,29 @@
         </div>
 
         <div class="width95margin0auto">
-            <div th:each="equipment: ${equipmentList}">
-                <div class="width250border07255006displayInlineBlockMargin14">
-                    <div class="width245">
+            <div th:each="equipment: ${equipmentList}" class="width250border07255006displayInlineBlockMargin14">
+                <div class="width245">
+                    <a th:href="@{/homepage/equipment/viewEquipment(id=${equipment.id})}">
+                        <img class="book-small"
+                             th:src="@{'data:image/jpg;base64,'+${equipment.base64Image}}"
+                             th:width="245px"
+                             alt="Podgląd sprzętu"/>
+                    </a>
+                </div>
+                <div class="textAlignCenterVerticalAlignCenterMarginTop5">
+                    <div class="height90">
                         <a th:href="@{/homepage/equipment/viewEquipment(id=${equipment.id})}">
-                            <img class="book-small"
-                                 th:src="@{'data:image/jpg;base64,'+${equipment.base64Image}}"
-                                 th:width="245px"
-                                 alt="Podgląd sprzętu"/>
+                            <b th:text="${equipment.name}"></b>
                         </a>
                     </div>
-                    <div class="textAlignCenterVerticalAlignCenterMarginTop5">
-                        <div class="height90">
-                            <a th:href="@{viewEquipment(id=${equipment.id})}">
-                                <b th:text="${equipment.name}"></b>
-                            </a>
-                        </div>
-                        <div>
-                            <b><i th:text="${equipment.manufacturer.manufacturerName}"></i></b>
-                        </div>
-                        <div class="height80">
-                            <i th:text="${equipment.shortDescription}"></i>
-                        </div>
-                        <div>
-                            <b class="colorbf0004" th:text="${equipment.price}"> [zł]</b>
-                        </div>
+                    <div>
+                        <b><i th:text="${equipment.manufacturer.manufacturerName}"></i></b>
+                    </div>
+                    <div class="height80">
+                        <i th:text="${equipment.shortDescription}"></i>
+                    </div>
+                    <div>
+                        <b class="colorbf0004" th:text="${equipment.price}"> [zł]</b>
                     </div>
                 </div>
             </div>
