--- a/src/main/resources/templates/admin/customer_list.html
+++ b/src/main/resources/templates/admin/customer_list.html
@@ -50,8 +50,7 @@
                         <td th:text="${customer.registerDate}"></td>
                         <td class="width220">
                             <a th:href="@{/admin/customer/editCustomer(id=${customer.id})}">EDYCJA</a> |
-                            <!-- TODO -->
-                            <a href="javascript:deleteCustomer(${customer.customerId})">USUŃ</a> |
+                            <a th:href="'javascript:deleteCustomer(\''+${customer.id}+'\')'">USUŃ</a> |
                             <a th:href="@{/admin/customer/viewCustomer(id=${customer.id})}">PODGLĄD</a>
                         </td>
                     </tr>
@@ -70,10 +69,9 @@
 
 </body>
 <script>
-    <!-- TODO -->
     function deleteCustomer(customerId) {
         if (confirm("Czy jestes pewny ? Jeżeli się zgodzisz klient z '" + customerId + "' id zostanie usunięty")) {
-            window.location = '../admin/deleteCustomer?id=' + customerId;
+            window.location = '../admin/customer/deleteCustomer?id=' + customerId;
         }
     }
 </script>
